--- a/ReOrganizedJune10/TopicList.Rmd
+++ b/ReOrganizedJune10/TopicList.Rmd
@@ -7,6 +7,26 @@ output: html_document
 ```{r include=FALSE}
 require(dplyr)
 sectionCounter=0
+#########
+docLinks <- function(section,spacer=' :: '){
+  category(section)
+  paste('**Documents**: [Ideas](CourseNotes/',
+        section,'/IdeasAndResources.Rmd)', 
+        spacer,
+        '[Draft Narrative](CourseNotes/',
+        section,'/DraftNarrative.Rmd)',sep='')
+  }
+#########
+categoryList <- list()
+category <- function(...) {
+  category <- unlist(list(...))
+  for (k in category) {
+  if (!k %in% names(categoryList))
+    categoryList[[k]] <<- c(LETTERS[sectionCounter])
+  else
+    categoryList[[k]] <<- c(categoryList[[k]],LETTERS[sectionCounter])
+  }
+}
 ```
 
 #### Temporary: Other files brought into this re-organization.
@@ -31,23 +51,29 @@ An essay about [presenting data with graphics](http://schoolofdata.org/handbook/
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Introduction
 
+`r I(docLinks('Introduction'))`
+
 1. Visualizations
 1. The purpose of a visualization.  Show two visualizations of the same data: one good for one purpose, another for another purpose.
-1. Infographics versus data charts.  This course doesn't deal with infographics
+1. Infographics versus data charts.  This course doesn't deal with infographics `r category('infographics')`
+
+
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Data Organization
+
+`r I(docLinks('DataOrganization'))`
 
 1. Datatables
     a) Cases and variables
         i. Rows and columns
-        i. Quantitative and categorical
+        i. Quantitative and categorical `r category('rectangular data','case meaning')`
     a. Meaning of a case.
         i. How the meaning of an individual case can change.  A datatable gives a **view of data**.  There are typically other views possible, sometimes derived from a particular view.
         i. Examples: 
             a. Runners as individuals and as groups, e.g. by sex, by age group, by sex and age group.
             a. Flight data involving two airports compared to airport data (e.g. latitude and longitude) on its own.  Taxi time versus airport.  Airplane model data: mass and engines
-    a. Various common formats: CSV, XLSX
-    a. Database:
+    a. Various common formats: CSV, XLSX 
+    a. Database:`r category('database','wide/narrow')`
         i. **Database** is a collection of datatables.  Often, the datatables have different cases.
         i. Examples:
             a. Flight time case
@@ -69,6 +95,7 @@ An essay about [presenting data with graphics](http://schoolofdata.org/handbook/
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Basics of Markdown and Course Logistics
 
+`r I(docLinks('Markdown'))`
 
 1. Templates
 1. compiling
@@ -83,6 +110,8 @@ Idea: Start them out with the knitr side-by-side display function, so that thing
 
     
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Basics of R
+
+`r I(docLinks('Rbasics'))`
 
 1. prompt, expression, value
 1. values and arithmetic and grouping parentheses
@@ -117,10 +146,20 @@ Idea: Start them out with the knitr side-by-side display function, so that thing
     a. run and chunk-run
     a. compiling in its own environment
         i) When compiling a Rmd file, it's always done in a new environment.  That differs from running the chunks.  **instructors**
+        
+Resources: 
+
+* <http://rforcats.net/>.  (See also the get cute cat and dog examples therein.)
+* Facebook's online course on [exploratory data analysis with R](https://www.udacity.com/course/viewer#!/c-ud651/l-685569241/e-824578546/m-824578547)
+* [R and science](http://www.fastcolabs.com/3028381/how-the-rise-of-the-r-computer-language-is-bringing-open-source-to-science)
+* [R and business](http://www.fastcolabs.com/3030063/why-the-r-programming-language-is-good-for-business) and [more](http://blog.revolutionanalytics.com/2014/05/companies-using-r-in-2014.html)
+
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Basic data commands
 
 Just to get them writing commands in a simple setting.
+
+`r category('summarize()','group_by()','mutate()')`
 
 1. `summarize()`
 1. `group_by()` and `summarize()` together
@@ -129,7 +168,11 @@ Just to get them writing commands in a simple setting.
  
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. From Data to Graph
 
+`r I(docLinks('GraphingIntro'))`
+
 To have some gratification relatively early in the course.
+
+`r category('GraphingIntro')`
 
 1. Use `mPlot()`, `mBar()`, `mMap()`, and `mNet()` to construct graphics.
 1. Examples
@@ -139,9 +182,13 @@ To have some gratification relatively early in the course.
     a. Immigration flows
 1. Putting such graphics in an Rmd file
 
+`r category('hi','bye')`
+
 #### =============== Day 3 ========================
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Constructing and Deconstructing Graphics
+
+`r I(docLinks('GraphicsConstructDeconstruct'))`
 
 This will switch back and forth between deconstruction and construction, within each topic
 
@@ -160,9 +207,15 @@ a. Frames and glyphs (basics)
 1. Annotations (later on)
 1. Coordinate transformations (later on --- remember logs!)
 
+`r category('frames','glyphs','scales','facets','annotations','transforms')`
+
+`r category('hi','bye')`
+
 #### =============== Day 4 ========================
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Classic charts and their interpretation
+
+`r I(docLinks('ClassicCharts'))`
 
 A first pass at aesthetics.
 
@@ -192,6 +245,10 @@ A first pass at aesthetics.
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. The Data backstory and wrangling
 
+`r I(docLinks('DataBackstory'))`
+
+`r category('hi','bye')`
+
 Data do not always come to you in a form that's ready for constructing graphics.  (We'll call such data: *glyph-ready* data.)  Often, the "raw" data is something other than what's in the graph.  The process of transforming data from its raw form into a glyph-ready form is often called *data manipulation*.  The word 'manipulation' has a negative connotation.  We will use **data wrangling** to refer to this process.
 
 The process of creating a presentation varies from one situation to another.  Often, the process is:
@@ -203,6 +260,8 @@ The process of creating a presentation varies from one situation to another.  Of
 1. Introductory examples (without programming)
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Data Table Operations
+
+`r I(docLinks('TableOperations'))`
 
 1. Review Group, Summarize, Mutate
     a. tally
@@ -225,6 +284,8 @@ The process of creating a presentation varies from one situation to another.  Of
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Stats 
 
+`r I(docLinks('Stats'))`
+
 Introduce the concept and then show how to compute and plot it.
 
 1. Density in 1-d
@@ -243,6 +304,8 @@ Introduce the concept and then show how to compute and plot it.
     
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Making Specialized Graphics
 
+`r I(docLinks('SpecializedGraphics'))`
+
 1. Maps
     a. Choropleths
     b. Scatter or heat or vector with borders as a guide
@@ -254,6 +317,8 @@ Introduce the concept and then show how to compute and plot it.
 
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Techniques with many variables 
+
+`r I(docLinks('ManyVariables'))`
 
 1. Parallel Axes
 1. Clustering
@@ -268,6 +333,8 @@ LOW PRIORITY
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Cleaning Data
 
+`r I(docLinks('CleaningData'))`
+
 Define a function for each of the really important things.  Make this into a `cleaningFunctions` package.  Or is there an R cleaning package
 
 1. Simple things
@@ -279,6 +346,8 @@ Define a function for each of the really important things.  Make this into a `cl
 [School of Data](http://schoolofdata.org/handbook/courses/data-cleaning/)
 
 ### `r I(LETTERS[sectionCounter <- sectionCounter+1])`. Scraping Data, data sources
+
+`r I(docLinks('ScrapingData'))`
 
 [Quandl](http://www.quandl.com/)
 
@@ -318,9 +387,7 @@ These are topics that don't need to be handled as part of the sequence, but wher
 1. The case studies (one essay/video for each)
 
 
-[Graphics Zoo](GraphicsZoo/GraphicsZoo.html)
-
-
-
-
-What are the basic features we want to display? Comparison, extent, individual cases in context, relationships, connections
+```{r}
+# Show the list of categories
+categoryList
+```
