--- a/ReOrganizedJune10/CourseNotes/BasicDataCommands/DraftNarrative.Rmd
+++ b/ReOrganizedJune10/CourseNotes/BasicDataCommands/DraftNarrative.Rmd
@@ -3,4 +3,11 @@ title: "Draft Narrative"
 output: html_document
 ---
 
-In this document, place draft narrative for this section of the notes. 
+ 
+
+Do a tabulation of the rank-choice data.
+
+Find the variances of the NCI data, by probe.
+
+Cross-tab of NHANES: perhaps cardiac death versus sex or BMI. 
+
