Stream Metabolism case study added.

--- a/ReOrganizedJune10/CourseNotes/GraphingIntro/DraftNarrative.Rmd
+++ b/ReOrganizedJune10/CourseNotes/GraphingIntro/DraftNarrative.Rmd
@@ -4,3 +4,5 @@ output: html_document
 ---
 
 In this document, place draft narrative for this section of the notes. 
+
+* Time Series: `DCF::babyNamesYearly`
