--- a/CaseStudies/Wind-Vector/Wind-Vector-Maps-Narrative-Writeup.Rmd
+++ b/CaseStudies/Wind-Vector/Wind-Vector-Maps-Narrative-Writeup.Rmd
@@ -6,24 +6,27 @@ require(ggplot2)
 require(grid)
 
 load("data/wind-2014-1949-comparisons.Rda")
+source("functions.R")
+source("geom-arrow.R")
 ```
 
 Wind consists of both *speed* and *direction*.  How can we visualize both of these elements on a map to get a sense of wind patterns?
 
 One way of doing this is a *vector field*.  For each wind measurement, we plot an arrow that points in the direction that the wind is going, and with the length of the arrow corresponding to the speed.
 
-Using this technique, we can visualize region of US, Mexico, and Central America in May 31, 2014 at 12:00 noon:
+Using this technique, we can visualize the region of US, Mexico, and Central America in May 31, 2014 at 12:00 noon:
 
 ```{r may2014,fig.height=10,fig.width=15}
 
 scalef <- 0.15 # determines scale of arrows
 
 ## These cover continental US down to the top tip of South America
-lats <- c(8, 49)
-longs <- c(-140, -63)
+lats <- c(5, 55)
+longs <- c(-145, -55)
 
 map.may2014 <- ggplot(may2014, aes(x = long, y = lat)) +
-  borders(database = "world") + coord_equal() +
+  borders(database = "world") + 
+  coord_equal(xlim = longs, ylim = lats) +
   geom_segment(aes(xend = long + scalef*u ,
                                    yend = lat + scalef*v),
                arrow = arrow(length = unit(scalef,"cm"))) +
@@ -52,7 +55,8 @@ Do you see any differences? It may be easier to view them superimposed on top of
 
 ```{r may2014_nov2013,fig.height=10,fig.width=15}
 map.may2014_nov2013 <- ggplot(may2014_nov2013, aes(x = long, y = lat, color = datestring)) +
-  borders(database = "world") + coord_equal() +
+  borders(database = "world") +
+  coord_equal(xlim = longs, ylim = lats) +
   geom_segment(aes(xend = long + scalef*u ,
                                    yend = lat + scalef*v),
                arrow = arrow(length = unit(scalef,"cm"))) +
