wind: add time series data and related graphs

--- a/CaseStudies/Wind-Vector/Wind-Vector-Maps-Narrative-Writeup.Rmd
+++ b/CaseStudies/Wind-Vector/Wind-Vector-Maps-Narrative-Writeup.Rmd
@@ -4,6 +4,7 @@ Viewing Wind Vectors of US, Mexico, and Central America
 ```{r preliminaries,message=FALSE}
 require(ggplot2)
 require(grid)
+require(openair)
 
 load("data/wind-2014-1949-comparisons.Rda")
 source("geom-arrow.R")
@@ -87,9 +88,78 @@ Where is the wind blowing a different direction in 2014, compared to 1949?  Wher
 
 # Looking at the same location over time
 
-This gives us a rough sense of what could happen over time, but to get a better sense of this we can look at the *same* location over time.  We'll start with Warren, Wisconson (45°N, 92.5°W).
+This gives us a rough sense of what could happen over time, but to get a better sense of this we can look at the *same* location over time.  We'll start with Warren, Wisconsin (45°N, 92.5°W), which is about 30 miles east of Saint Paul.
+
+Let's look at wind speed, first, over time, from 1949 to the present, every 6 hours
+
+```{r fig.height=10,fig.width=15}
+ggplot(warren_wi, aes(date, speed)) +
+  geom_point() 
 
 
+```
+
+What a mess!  We can see this a little better by making the points more transparent with the `alpha` argument:
+
+```{r fig.height=10,fig.width=15}
+ggplot(warren_wi, aes(date, speed)) +
+  geom_point(alpha = 0.05) + theme_bw()
+```
+
+Another strategy would be count the number of dots in each region to get a sense if there are any unusually common clusters:
 
 
+```{r fig.height=10,fig.width=15}
+ggplot(warren_wi, aes(date, speed)) +
+  stat_binhex()
+
+
+```
+
+Does it seem like there are average changes over time?
+
+We can also use a similar strategy to look at wind direction (expressed as a number between 0 and 2 pi, i.e. radians)
+
+```{r fig.height=10,fig.width=15}
+ggplot(warren_wi, aes(date, angle)) +
+  geom_point(alpha = 0.1) +
+  theme_bw()
+
+ggplot(warren_wi, aes(date, angle)) +
+  stat_binhex()
+
+```
+
+We can combine wind, speed, and direction by looking at a "wind rose" plot, which shows the proportion of time that the wind is blowing in certain directions at certain speeds.  Here's a wind rose plot for Warren, WI from 1950 to 2013:
+
+```{r fig.height=10,fig.width=15}
+windRose(warren_wi, ws = "speed", wd = "degrees",
+         main = "Warren, WI Wind")
+
+```
+
+We can look at this by month, or whether it was daylight, as well:
+
+```{r fig.height=10,fig.width=15}
+windRose(warren_wi, ws = "speed", wd = "degrees", type = "month", main =  "Warren, WI Wind")
+
+windRose(warren_wi, ws = "speed", wd = "degrees", type = "daylight", main =  "Warren, WI Wind")
+```
+
+
+Data was also gathered for the southernmost tip of Mexico, which is at the same longitude (15°N, 92.5°W):
+
+```{r fig.height=10,fig.width=15}
+windRose(gulf, ws = "speed", wd = "degrees", main = "Wind Near Huixtla, Mexico")
+
+```
+
+Again, we can split by month or whether it was daylight:
+
+```{r fig.height=10,fig.width=15}
+windRose(gulf, ws = "speed", wd = "degrees", type = "month", main = "Wind Near Huixtla, Mexico")
+
+windRose(gulf, ws = "speed", wd = "degrees", type = "daylight", main = "Wind Near Huixtla, Mexico")
+
+```
 
